# StructuurComputerprogrammas2-1SCH

./: .gitignore  README.md
week10/: Code oplossingen.c  oefeningen.c
week10/wpo9/: CMakeLists.txt  balanced_brackets.c  delete_node.c  generic_linked_list.c  generic_queue.c  generic_tree_insert_node.c  max_value_node.c  stack.c  stack.h
week11/: Code oplossingen.c  oefeningen.c
week11/wpo10/: CMakeLists.txt  count_c.c  database.c  grep.c  head.c
week12/: oplossingen stackMachine.c
week12/wpo11/: CMakeLists.txt  stackmachine_execute_call.c  stackmachine_execute_definetemps_pushtemps.c  stackmachine_execute_plus.c  stackmachine_execute_pusharg_returntop.c  stackmachine_execute_pushint.c  stackmachine_execute_storetemp_pop.c  stackmachine_execute_sub.c
week13/wpo12/: CMakeLists.txt  factorial_goto.c  oefeningen.c  password.c  person_info  read_n_people.c  trampoline.h  trampolined_ggd.c
week14/: oefeningen.c
week14/wpo13/: CMakeLists.txt  bitmasks_person.c  replace_line.c
week2/: Code oplossingen oef 2-9.c
week2/wpo1/: CMakeLists.txt  ackermann.h  calc_sine.h  collatz.h  fac.h  ggd.h  main.c  oef2.c  print_difference.h  squared.c  vkv.h
week3/wpo2/: CMakeLists.txt  calc_cosine.h  calc_cosine.h.txt  convert_hex_to_dec.h  fizzbuzz.h  insertion_sort.h  main.c  print_christmas_tree.h  print_christmas_tree_oplossing.c  (+2 more)
week4/: Code oplossingen 1-7.c  fib.c
week5/: code oplossingen 1-6.c
week6/: Code oplossingen 1-8.c  oefeningen.c
week7/: Code oplossingen 1-5.c  oefeningen.c
week8/: Code oplossingen.c  oefeningen.c
week9/: oefeningen.cpp
(+53 files in other folders)
